gccida/c3/gen_type_die
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11539:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11545:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11581:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v66; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11584:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11627:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v112; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11640:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11655:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *vindex; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11695:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11719:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11720:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v205; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11777:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( int)rtl[1]; 
           ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11858:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v48 = ( int)rtl[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11874:45: error: use of undeclared identifier 'debug_info_level_0'
if ( ( v48 & 0x4000) != 0 || ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:11922:5: error: incomplete definition of type 'struct hash_table'
v157->alloc_node = indirect_string_alloc; 
~~~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/ggc.h:33:8: note: forward declaration of 'struct hash_table'
struct hash_table;
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:12035:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v179 = ( int)v177[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:12085:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v183 = ( const char *)values->int_cst.rtl[2]; 
                      ^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:12127:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v183 = ( const char *)values->int_cst.rtl[2]; 
                      ^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:12143:5: error: incomplete definition of type 'struct hash_table'
v186->alloc_node = indirect_string_alloc; 
~~~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/ggc.h:33:8: note: forward declaration of 'struct hash_table'
struct hash_table;
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/dwarf2out.c:12161:46: error: use of undeclared identifier 'debug_info_level_0'
if ( ( v179 & 0x4000) != 0 || ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_type_die/src/obj/dwarf2out.o] Error 1
